--- a/css/main.css
+++ b/css/main.css
@@ -36,8 +36,8 @@ h3 {
 #footer {
   bottom: 0;
   width: 100%;
-  height: 210px;
-  background-color: #f5f5f5;
+  height: 230px;
+  background-color: #fff;
  margin-bottom:0;
  border-top:solid 1px #a8a8a8;
 }
@@ -48,14 +48,17 @@ h3 {
 }
 
 .col-xs-2 img {
-    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
-    filter: gray; /* IE6-9 */
-    -webkit-filter: grayscale(1); 
+    opacity:0.5;
 }
 
 .col-xs-2 img:hover {
-    filter: none;
-    -webkit-filter: grayscale(0);
+    opacity:1;
+	
+	-webkit-transition: opacity .2s;
+-moz-transition: opacity .2s;
+-ms-transition: opacity .2s;
+-o-transition: opacity .2s;
+transition: opacity .2s;
 
 }
 
@@ -75,4 +78,9 @@ h1 a:hover{
 	font-weight:bold;
 	text-decoration:none;
 	color:#760707;
+	-webkit-transition: font-weight .2s, text-decoration .2s, color .2s;
+-moz-transition: font-weight .2s, text-decoration .2s, color .2s;
+-ms-transition: font-weight .2s, text-decoration .2s, color .2s;
+-o-transition: font-weight .2s, text-decoration .2s, color .2s;
+transition: font-weight .2s, text-decoration .2s, color .2s;
 }
